# TextGenerationEvaluator

./: .env  .env_sample  .gitignore  code_collector.sh  eval.sh  evaluator.py  export.sh  file_handler.py  gen.sh  import_refactorer.py  main.py  models.py  path_configs.py  pyproject.toml  the_new_evaluator.py  the_new_models.py  utils.py
data_management/: __data_manager.py  batch_managers.py  data_loaders.py  data_manager.py  parsers.py  preprocess.py
evaluators/: base_evaluator.py  best_model_tracker.py  model_dumper.py  oracle_evaluator.py  real_evaluator.py
export_utils/: bert_evaluation.py  evaluation_exporter.py  evaluation_utils.py  histogram_exporter.py  real_evaluation_summary.py  synthetic_evaluation_summary.py
metrics/: FBD.py  base_metric.py  bert_distance.py  bleu.py  divergences.py  embd.py  fbd.py  fbd_embd.py  ms_jaccard.py  multiset_distances.py  nll.py  self_bleu.py
metrics/BERT/: extract_features.py
metrics/bert/: extract_features.py  modeling.py
metrics/bleu/: setup.py
metrics/bleu/cpp_sources/: bleu.cpp
metrics/bleu/cython_sources/: bleu_cpp.pxd  bleu_cy.pyx
metrics/bleu/lib/: __init__.py
metrics/bleu_cy/cython_sources/: bleu_cpp.pxd  bleu_cy.pyx
metrics/cythonics/cpp_sources/: self_bleu.cpp
metrics/oracle/: oracle_lstm.py  target_lstm.py
previous_works/: __init__.py
previous_works/leakgan2/: LeakGANModel.py  Main.py  convert.py
previous_works/model_wrappers/: base_model.py  others.py  rvae.py  texygen.py
previous_works/textgan2/: convert.py  data_utils.py  demo.py  denoise.py  error_rate.py  eval_kde.py  model.py  rougescore.py  textGAN.py  utils.py
previous_works/texygen/: path_configs.py
scripts/: eval.sh  export.sh  gen.sh  models.js
src/: main.py  main_eval.py  main_old.py
src/data_management/: data_manager.py  preprocess.py
src/db_management/: __init__.py  model_db_manager.py  model_drop.py  models.py  predefined_queries.py  setup.py
src/evaluators/: __init__.py  base_evaluator.py  best_model_tracker.py  model_dumper.py  oracle_evaluator.py  real_evaluator.py
src/export_utils/: evaluation_exporter.py  evaluation_utils.py  histogram_exporter.py
src/metrics/: bert_distances.py  bleus.py  divergences.py  multiset_distances.py  nll.py
src/previous_works/: __init__.py
src/utils/: file_handler.py  model_dumper.py  nltk_utils.py  path_configs.py
utils/: file_handler.py  nltk_utils.py  path_configs.py
(+129 files in other folders)
