[tool.poetry]
name = "textgenerationevaluator"
version = "0.1.0"
description = ""
authors = ["Danial Alihosseini"]

[tool.poetry.dependencies]
python = "3.7.7"
torch = "^1.5.1"
numpy = "^1.19.0"
torchtext = "^0.6.0"
revtok = "^0.0.3"
nltk = "^3.5"
POT = "^0.7.0"
transformers = "^3.0.1"
FastBLEU = "^0.0.4"
sklearn = "^0.0"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.3"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
