[tool.poetry]
name = "textgenerationevaluator"
version = "0.1.0"
description = ""
authors = ["Danial Alihosseini"]

[tool.poetry.dependencies]
python = "3.7.7"
torch = "1.4.0"
numpy = "^1.19.0"
torchtext = "^0.6.0"
revtok = "^0.0.3"
nltk = "^3.5"
POT = "^0.7.0"
FastBLEU = "^0.0.4"
sklearn = "^0.0"
pandas = "^1.0.5"
mongoengine = "^0.20.0"
python-dotenv = "^0.14.0"
pymongo = {version = "^3.10.1", extras = ["snappy", "zstd"]}

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.3"
rope = "^0.17.0"
pylint-mongoengine = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
