[tool.poetry]
name = "textgenerationevaluator"
version = "0.1.0"
description = ""
authors = ["Danial Alihosseini"]

[tool.poetry.dependencies]
python = "3.7.7"
torch = "1.4.0"
numpy = "^1.19.0"
torchtext = "^0.6.0"
revtok = "^0.0.3"
nltk = "^3.5"
POT = "^0.7.0"
sklearn = "^0.0"
pandas = "^1.0.5"
mongoengine = "^0.20.0"
python-dotenv = "^0.14.0"
pymongo = {version = "^3.10.1", extras = ["snappy", "zstd"]}
transformers = "^3.0.2"
fast-bleu = "^0.0.72"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.3"
rope = "^0.17.0"
pylint-mongoengine = "^0.4.0"
pyparsing = "2.4.7"
importlib_metadata = "^1.7.0"
astor = "0.8.1"
gast = "0.2.2"
google-pasta = "0.2.0"
grpcio = "1.30.0"
h5py = "2.10.0"
importlib-metadata = "1.7.0"
keras-applications = "1.0.8"
keras-preprocessing = "1.1.2"
markdown = "3.2.2"
opt-einsum = "3.2.1"
protobuf = "3.12.2"
tensorboard = "1.15.0"
tensorflow-estimator = "1.15.1"
termcolor = "1.1.0"
werkzeug = "1.0.1"
wheel = "0.34.2"
zipp = "^3.1.0"
absl-py = "0.9.0"
filelock = "^3.0.12"
packaging = "20.4"
sacremoses = "0.0.43"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
